Closed
Bug 20901
Opened 26 years ago
Closed 26 years ago
[feature] Unix Paste should request CLIPBOARD selection
Categories
(SeaMonkey :: General, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M16
People
(Reporter: Masato, Assigned: pavlov)
References
Details
- The X/11 quick Copy & Paste (mark & MMB) completely doesn't work.
(mozilla ---> other apps. - the other dir. works)
- mark & ctrl+c/x put the marked text into the quick X/11-Clipboard
(you have to press the MMB) (forms only)
- the method above don't work on normal text (you can mark it, but no copy)
- If text (in forms and normal text) marked Cut & Copy in the Edit menu
is inactive. Text in forms automatically gets unsmarked if any pull down
menu is selected.
- the communicator clipport is ignored.
Updated•26 years ago
|
Assignee: leger → akkana
Comment 1•26 years ago
|
||
reassign to akkana
Updated•26 years ago
|
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → INVALID
Comment 2•26 years ago
|
||
Lots of different bugs here.
Copy-on-select is bug 7787; shaver is working on it and has a fix, and we're
negotiating with the owner of the selection code to get the fix checked in.
I don't understand the second point; don't we want alt-C/alt-X (BTW, it's alt
now, not control, now that the emacs keybindings are coming online) to make the
selection available as an X selection?
I'm not sure I understand the third point (what's "normal text"? What window?)
-- maybe this is due to trying to use control-C instead of alt?
- The fourth point is an issue with menu updating, so it's a bug on the
particular window you're using. If it's the browser window, it's a dup of
14026; if it's another window, you should probably file a separate bug.
- Point 5: selecting something in Communicator and middle-mouse pasting it into
the mozilla editor works fine for me. What are you trying to do that isn't
working? Please be more specific.
I'm going to close this bug because I think all the issues mentioned here are
already addressed in other bugs. Reopen it if you have a specific test case for
the points that I didn't understand. Please include instructions on exactly how
to reproduce what you're seeing, what you see happening, and what you expected
to happen.
Some additional infos:
Build ID:1999111520 (Sorry forgot to post)
Normal text is the text that is not in a HTML form (the the text which is
normally displayed on websites)
Example:
o take any website (without a form)
o select text
o press Ctrl+C (for copy to Clipboard)
o press MMB on an application (that accept MMB-Paste; most apps does)
Result: nothing happen
If you do the thing above in forms (here you have to select text INSIDE a form)
the MMB-Paste is succesful performed.
the Copy on select (from Mozilla to an other app.) definitely doesn't work
I should have make an own point of this:
- Text in forms automatically gets unselected if any pull down
menu is "activated".
- the communicator clipboard is ignored.
for example:
o select any text in Communicater
o press Alt+C (for copy into communicator clipboard)
o unselect text (the formerly selected text is kept in the
communicator clipboard (you can verify it by using Alt+V in a form;
even in a seperate running communicator)
Result: there is no way to paste the text from the communicator clipboard
into Mozilla. (Ctrl+V or MMB doesn't work)
hope this helps
Updated•26 years ago
|
Status: RESOLVED → REOPENED
Summary: Copy & Paste fails (UNIX only?) → Paste should request CLIPBOARD selection
Comment 4•26 years ago
|
||
Reopening to reassign the one bug that I don't think is filed.
Updated•26 years ago
|
Assignee: akkana → pavlov
Status: REOPENED → NEW
Summary: Paste should request CLIPBOARD selection → Unix: Paste should request CLIPBOARD selection
Comment 5•26 years ago
|
||
The problem with copy not working in the browser window is bug 14026.
The "selection highlighting gets un-drawn while menus are visible" (it doesn't
get unselected, it just stops being drawn while menus are on the screen) is a
bug in the xpfe; please file a separate bug with component = XP Toolkit/Widgets,
probably assigned to hyatt@netscape.com or saari@netscape.com.
The "communicator clipboard" issue is a real issue. 4.x was inconsistent about
its dealings with the X selection mechanism: sometimes it used the PRIMARY X
selection, sometimes the CLIPBOARD. Gtk, the widget set we're using now,
doesn't even have #defines to ask for the CLIPBOARD selection. But it might be
worth considering writing support for the CLIPBOARD selection since 4.x used
it. This probably isn't going to be a very high priority, though; we might need
someone on the net to help with it. Reassigning to Pavlov, who owns the X
clipboard.
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
Target Milestone: M15
Comment 10•26 years ago
|
||
Shouldn't this bug be listed under some platform other than PC??
Comment 11•26 years ago
|
||
*** Bug 28415 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•26 years ago
|
Depends on: 31542
Summary: Unix: Paste should request CLIPBOARD selection → [feature] Unix Paste should request CLIPBOARD selection
| Assignee | ||
Updated•26 years ago
|
Whiteboard: 2 days
| Assignee | ||
Updated•26 years ago
|
Target Milestone: M15 → M16
| Assignee | ||
Updated•26 years ago
|
Whiteboard: 2 days → 2 days -- 4/21/00
| Assignee | ||
Comment 13•26 years ago
|
||
have fix. need to get 35814 fixed before I can check in though.
Depends on: 35814
Whiteboard: 2 days -- 4/21/00 → 2 days -- 4/14/00 -- have fix
| Assignee | ||
Comment 14•26 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → FIXED
Comment 15•26 years ago
|
||
Pavlov says that this is fixed, I don't really understand the bug report (sorry).
pavlov/akkana: if any verification needs to be done on this that I didn't already
do for 24926, please let me know, and I'll gladly do it. Or, a pointer to a FAQ
on how the X Clipboard works would really help.
Status: RESOLVED → VERIFIED
Whiteboard: 2 days -- 4/14/00 -- have fix
Updated•21 years ago
|
Product: Browser → Seamonkey
| Comment hidden (collapsed) |
You need to log in
before you can comment on or make changes to this bug.
Description
•