fix for bug #20901 (Unix Paste should request CLIPBOARD selection)